Solve problem with right white space

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -13,8 +13,16 @@ $font-main: 'Signika', sans-serif;
   box-sizing: border-box;
 }
 
+html,
 body {
-  margin: 0;
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
+}
+
+body {
   font-family: $font-main;
 }
 
